InfoBarContainerView: Redraws infobars on a native theme change

This CL fixes a bug where infobars would be left with the previous
theme's border color when the system theme changes.  Previously, you'd
have to resize the browser to get the infobar to redraw correctly.

R=pkasting@chromium.org
BUG=693815

Review-Url: https://codereview.chromium.org/2705763002
Cr-Commit-Position: refs/heads/master@{#451443}

Former-commit-id: 9a1fcb408d1540dbf44a44755352ba12cc5f6a06